# codebase

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md  Untitled.ipynb  azure-pipelines.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
ai/: claude.md  copilot.md  gemini.md
bash/system/: paths.sh
command_line/: conda_info.md  conda_info.txt  pip_info.md  pip_info.txt  uv_info.md
command_line/docker/: README.md
command_line/linux/: clean.sh  compress.sh  compress.txt  conda_exists.sh  conda_info.txt  edit_media.sh  format_conversion.sh  format_conversion.txt  paths.sh  paths.txt  pdf_merge_multiple.sh  pdf_reduce_size.sh  reduce_pdf_size.sh  resources_management.sh  resources_management.txt  string_manipulation.sh  system.sh  system.txt  time.sh  url.sh  web.sh  web.txt
command_line/windows/: WSL.md  network.txt  (+4 more)
cpp/: CMakeLists.txt  playground.cpp
cpp/io/: read_file.cpp  read_file.hpp
cpp/log/: timer.hpp
cpp/numeric/: math_constants.hpp  math_utils.hpp
gs/: RutinaMacros.gs
java/: version.md
js/: copyright_autodate.html
latex/: references.bib
linux/: compress.txt
minsc/: Firefox.md  Laptop display resolution.md  Preferences.sublime-settings  Rename branch.md  Screen_recording.md  VSCode.md  WSL.md  remote_vscode.sh  remote_vscode_extension.txt  vscode_settings.json
php/: README.md  simple_email.php
python/: .travis.yml  README.md  conda.yaml  conda_py35.yaml  conftest.py  playground.py  requirements.txt
share/: Lenna_contours.npy  blob_config_template.json  data.hdf5  data.json  data.npy  data.parq  data.pk  data.txt  data1.txt  pandas.db  traj-1.csv  traj-2.csv  traj.csv  traj.txt  traj.yaml  traj_header.csv
(+297 files in other folders)
